# maldev_in_rust

Dll_Injection/: Cargo.toml
Dll_Injection/src/: main.rs
Dll_Linking/: Cargo.toml
Dll_Linking/src/: lib.rs
Executing_Shellcode_Locally/: Cargo.toml
Executing_Shellcode_Locally/src/: main.rs
Inject_Shellcode_to_Registry/: Cargo.toml
Inject_Shellcode_to_Registry/src/: main.rs
IpV4_Obfuscation/: Cargo.toml
Mac_Obfuscation/src/: lib.rs
Payload_Staging_WebServer/: Cargo.toml
Payload_Staging_WebServer/src/: main.rs
Shellcode_Injection/: Cargo.toml
apc-injection/: Cargo.toml
apc-injection-early-bird/: Cargo.toml
apc-injection-early-bird/src/: main.rs
apc-injection/src/: main.rs
local-mapping-injection/: Cargo.toml
local-mapping-injection/src/: main.rs
part1-dllcreation/hello/: Cargo.toml
part1-dllcreation/hello/src/: lib.rs
part1-dllcreation/hello_runner/: Cargo.toml
part1-dllcreation/hello_runner/src/: main.rs
part5-shellcodeinjection/src/: main.rs
partn-ipv4obfuscation/src/: lib.rs
partn-macfuscation/: Cargo.toml
thread-enumeration/: Cargo.toml
thread-enumeration/src/: main.rs
thread-hijacking/: Cargo.toml
thread-hijacking/src/: main.rs
