[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }

[dependencies.winapi]
version = "0.3.9"
features = ["wininet", "winbase", "minwinbase", "minwindef", "winnt", "basetsd"]
